# Hybrid-Decentralized-Identity-System

./: README.md
FHIR/: FHIRBundle.json
config/: testnet.md
rust_ssi/: Cargo.toml  patient_visit_summary.txt
rust_ssi/FHIR/: FHIRBundle.json  future-integrations.md
rust_ssi/src/: fhir_handler.rs  fhir_reader.rs  hedera_integration.rs  main.rs  pdf_generator.rs  storage.rs  utils.rs
rust_ssi/src/api/: mod.rs
rust_ssi/src/models/: bundle.rs  common.rs  condition.rs  encounter.rs  medication.rs  mod.rs  observation.rs  patient.rs  practitioner.rs
script/: DeployDIDSystem.s.sol
scripts/: test_fhir_system.sh
src/: ClaimsRegistry.sol  ConsentRegistry.sol  DIDRegistry.sol  FHIRUtils.sol  didRedistry+Claims.sol
test/: DIDSystem.t.sol
