[package]
name = "rust_ssi"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# FHIR and healthcare standards
# ssi = "0.9"  # Uncomment when ready to use SSI features

# Cryptography and hashing
sha2 = "0.10"
hex = "0.4"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Regular expressions
regex = "1.0"
lazy_static = "1.4"

# Future MongoDB integration
# mongodb = "2.0"
# bson = "2.0"

# Future PDF generation
# printpdf = "0.5"  # For pure Rust PDF generation
# wkhtmltopdf = "0.3"  # For HTML to PDF conversion

# Future web framework
# axum = "0.7"
# tower = "0.4"

# Future Hedera integration
# hedera-sdk-rust = "0.35"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["basic"]
basic = []
full = []
